# agskmem

./: .gitignore  Cargo.toml  DESIGN.md
migrations/: 0001_init.sql  0002_governance_enrichment.sql  0003_hybrid_embeddings.sql
src/: app.rs  cli.rs  config.rs  db.rs  design_types.rs  embed.rs  graph.rs  lib.rs  main.rs  mcp.rs  model.rs  recall.rs
templates/: omp-agskmem-extension.ts
tests/: core.rs
