[package]
name = "agskmem"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
arc-swap = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
hex = "0.4"
regex = "1"
rmcp = { version = "1.7", default-features = true, features = ["transport-io"] }
rusqlite = { version = "0.37", features = ["bundled", "functions", "backup", "blob"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1.20"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "signal", "sync", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
